[package]
name = "ul_todo_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["alloc"] }
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tabled = { version = "0.20.0", features = ["ansi"] }
uuid = { version = "1.18.1", features = ["v4"] }
xdir = "0.1.0"
